# rocket_starter

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
src/routes/: example.rs
