[package]
name = "rocket_starter"
version = "0.1.0"
authors = ["Jérôme Krell <jerome.krell@bluewin.ch>"]
edition = "2018"
license = "Unlicense OR MIT"

homepage = "https://github.com/JeromeK13/rocket-starter"
repository = "https://github.com/JeromeK13/rocket-starter"
documentation = "https://github.com/JeromeK13/rocket-starter"

description = "Rust / Rocket codebase template."
readme = "README.md"
keywords = ["template", "web", "rocket"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]